--- a/quiz.html
+++ b/quiz.html
@@ -172,7 +172,7 @@ countdown(30);
 		
 		
         <script type="text/javascript">
-		window.onload = function(){
+		//window.onload = function(){
 		var net_sahi_kia = 0;
 		var net_attempt_kia = 0;
 		var total_all = 0;
@@ -966,7 +966,7 @@ ct++;
 }
 	
 
-}	</script>
+	</script>
     </body>
 
 </html>
